--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,11 +1,16 @@
 # Core LangGraph and LangChain dependencies
-langgraph>=0.2.0
-langchain-core>=0.3.0
-langchain-openai>=0.2.0
-langchain-google-genai>=2.0.0
+langgraph
+langchain-core
+langchain-openai
+langchain-google-genai
 
 # Google AI dependencies
-google-generativeai>=0.8.0
+google-generativeai
+
+# FastAPI and web server dependencies
+fastapi>=0.104.0
+uvicorn>=0.24.0
+pydantic-settings>=2.0.0
 
 # Pydantic for data validation
 pydantic>=2.0.0
