--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
       - GEMINI_API_KEY=${GEMINI_API_KEY}
       - GOOGLE_SEARCH_API_KEY=${GOOGLE_SEARCH_API_KEY}
       - GOOGLE_SEARCH_ENGINE_ID=${GOOGLE_SEARCH_ENGINE_ID}
+      - POSTGRES_URL=postgresql://user:password@postgres:5432/product-review-agent
     volumes:
       - ./server:/app
     command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
@@ -29,6 +30,26 @@ services:
     command: npm run dev -- --host 0.0.0.0 --port 5173
     depends_on:
       - backend
+      - postgres
+    networks:
+      - app-network
+
+  postgres:
+    image: pgvector/pgvector:pg16
+    container_name: postgres_db
+    environment:
+      POSTGRES_DB: product-review-agent
+      POSTGRES_USER: user
+      POSTGRES_PASSWORD: password
+    ports:
+      - "5432:5432"
+    volumes:
+      - ./.postgres-data:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U user -d product-review-agent"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
     networks:
       - app-network
 
